<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    app:cardCornerRadius="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/article_cardview_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,4:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/title"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_image" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:padding="@dimen/dp_4"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            android:text="@string/description" />

        <TextView
            android:id="@+id/published_at_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:text="@string/published_at" />

        <TextView
            android:id="@+id/published_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_toEndOf="@id/published_at_header"
            android:padding="4dp"
            app:layout_constraintStart_toEndOf="@id/published_at_header"
            app:layout_constraintTop_toTopOf="@id/published_at_header"
            android:text="@string/published_at_text" />

        <TextView
            android:id="@+id/author_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/published_at_header"
            android:layout_toStartOf="@id/author"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@id/author"
            app:layout_constraintTop_toTopOf="@id/author"
            android:text="@string/author" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/published_at_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/published_at_header"
            android:padding="4dp"
            android:text="@string/author_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
